[gd_scene load_steps=5 format=3 uid="uid://bhg3jc480kdpx"]

[ext_resource type="Script" uid="uid://wm5bvojsbvtb" path="res://Scenes/TheStart/start.gd" id="1_6vl64"]
[ext_resource type="Texture2D" uid="uid://pc80y4he65vy" path="res://Scenes/TheStart/TheStart.png" id="1_bc70w"]
[ext_resource type="Texture2D" uid="uid://sbfgsdffl5b3" path="res://Scenes/TheStart/Thestart2.png" id="2_6vl64"]
[ext_resource type="Texture2D" uid="uid://e6xbvy4jnm2q" path="res://Scenes/TheStart/start3.png" id="3_i20r5"]

[node name="Start" type="Node2D"]
script = ExtResource("1_6vl64")

[node name="TheStart" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(160, 90)
texture = ExtResource("1_bc70w")

[node name="TheStart2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(160, 90)
texture = ExtResource("2_6vl64")

[node name="TheStart3" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(160, 90)
texture = ExtResource("3_i20r5")

[node name="BlackFade" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 1)
